fixed overflow bug. Added leave button and logic

--- a/client/src/sass/layout/body.scss
+++ b/client/src/sass/layout/body.scss
@@ -1,5 +1,6 @@
 html{
     font-family: $family-sans-serif;
+    overflow-y: hidden;
 }
 
 body{
